Place your change log text here.  This file will be incorporated with your app at package time.